tests/rosetta/transpiler/OCaml/2048.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/2048.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "2048" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/2048.ml", line 421, characters 28-35:
421 |   let m = moveLeft (!board) (score) in
                                  ^^^^^^^
Error: This expression has type int ref
       but an expression was expected of type int
